# Auto-research

./: .gitignore  AGENTS.md  README.md  progress.md  project_state.json  pyproject.toml  requirements.txt
configs/: controllers.yaml  default.yaml  sim_tracking.yaml
docs/: architecture.md  cloudflare_tunnel.md  multi_host_codex_swarm.md  multi_turn_codex.md  opencode_repo_review.md  runner_setup.md
docs/plans/: 2026-05-22-hermes-codex-conversation-api.md  2026-05-22-multi-host-codex-swarm.md
experiments/hardware/: data_logging_format.md  hardware_protocol.md  safety_checklist.md  sim2real_gap_analysis.md
experiments/simulation/: ablation_plan.md  baseline_methods.md  metrics.md  sim_protocol.md
figures/: README.md
logs/: leaf_mpc_validation.json  runner_status.json
matlab/leaf_mpc/: README.md
paper/: main.tex  references.bib
paper/sections/: conclusion.tex  (+5 more)
scripts/: compile_paper.sh  install_local_runner_systemd.sh  local_orchestrator.py  local_runner_server.py  local_runner_service.py  make_figures.py  run_codex_task.sh  run_local_loop.sh  run_local_runner_server.ps1  run_local_runner_server.sh  run_opencode_task.sh  run_simulation.py  setup_cloudflare_tunnel.ps1  start_cloudflare_quick_tunnel.ps1  start_cloudflared_named_tunnel.ps1  validate_leaf_mpc_matlab.py
src/: __init__.py
tasks/: completed_tasks.json  research_prd.json  task_queue.json  webhook_probe.json
tests/: conftest.py  test_local_orchestrator.py  test_project_structure.py  test_public_behavior.py  test_security_regressions.py  test_session_worker.py  test_underwater_vehicle.py
(+129 files in other folders)
